[package]
name = "disk_patrol"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
syslog = { version = "6.0", features = []  }
#lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls", "ring", "rustls-native-certs"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-native-tls"] }
log = "0.4.27"
indicatif = { version = "0.17", features = ["tokio"] }
rand = { version = "0.8", features = ["small_rng"] }
toml = "0.8"
simple-logging = "2.0.2"

# Static linking for musl builds
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
